# valiant-turtle-2

./: .gitmodules  LICENSE  README.md
acorn_userport_adapter/kicad/: .gitignore  parallel_adapter.kicad_pro
acorn_userport_adapter/openscad/: generate_openscad_files.sh
communicator/firmware/: CMakeLists.txt  ble_advertising.py  ble_central.py  btcomms.c  btcomms.h  byte_fifo.py  command_shell.py  configuration.py  data_encode.py  debug.c  debug.h  eeprom.py  fifo.h  fsm.c  fsm.h  host_comms.py  ir.c  ir.h  ir_uart.c  ir_uart.h  ir_uart.pio  ir_uart.py  leds.c  leds.h  leds.py  log.py  logging.py  main.c  main.py  mcp23017.py  parallel_port.py  pickle.py  process_timer.py  robot_comms.py  status_led.py  uart.c  uart.h  usb_cdc.c  usb_descriptors.h  vt1_mode.py  (+1 more)
communicator/kicad/: ir_leds.kicad_sch  serial_interface.kicad_sch  vt2_communicator.kicad_sch
communicator/mpython_fw/: ble_advertising.py  ble_central.py  byte_fifo.py  ir_uart.py  log.py  main.py  mcp23017.py  mpython_fw.code-workspace  parallel.py  parallel_port.py  status_led.py
communicator/openscad/: generate_openscad_files.sh
communicator/vt1-firmware/: CMakeLists.txt  config.cpp  config.h  eeprom.cpp  eeprom.h  i2c.cpp  i2c.h  ir.cpp  ir.h  ir_uart.pio  led.cpp  led.h  logging.cpp  logging.h  main.cpp  mcp23017.cpp  mcp23017.h  parallel.cpp  parallel.h  uart.cpp  uart.h
communicator/vt2-firmware/: CMakeLists.txt  btcomms.c  btstack_config.h  fifo.c  main.c  probe2.cfg  probe3.cfg  tusb_config.h  uart.c  usb_cdc.h  usb_descriptors.c
docs/: Battery_Pack_DIagrams.odp  pcb.dxf
documents/: .~lock.VT2_Calibration.ods#  BBC Micro RS432 Diagram.odp  PPS_to_delay_calc.ods  VT2_Calibration.ods
documents/Turtle_BBC_BASIC/: trtprog.bas  turtle.bas
firmware/: CMakeLists.txt  cli.c  command.c  command.h  drivemotors.c  drivemotors.h  i2cbus.c  i2cbus.h  ina260.h  leds.c  leds.h  main.c  pca9685.h  penservo.c  penservo.h  servo.c  servo.h
firmware/communicator/: ble_central.py  command_shell.py  configuration.py  eeprom.py  host_comms.py  host_shell.py  interactive_shell.py  ir_uart.py  leds.py  logging.py  main.py  mcp23017.py  options.py  parallel_port.py  vt1_mode.py  vt2_mode.py
firmware/linux/: .gitignore  ble_central.py  dlogging.py  host_comms.bup  host_comms.py  host_shell.py  interactive_shell.py  main.py  vt2_mode.py
firmware/robot/: ble_peripheral.py  configuration.py  data_encode.py  diffdrive.py  drv8825.py  eeprom.py  ina260.py  led_fx.py  logging.py  main.py  metric.py  pen.py  pulse_generator.py  stepper.py  velocity.py
firmware/stepper/: drv8825.py  main.py  pulse_generator.py  stepper.py
host/acornsoft_logo/: flower.lg  testshape.lg  vt2ext.lg  vt2util.adl
kicad/: batt_mon.kicad_sch  drv8825.kicad_sym  mounting.kicad_sch  penservo.kicad_sch  power_supply.kicad_sch  pwm_driver.kicad_sch  rgb_led.kicad_sch  stepperdriver.kicad_sch  sym-lib-table  valiant-turtle-2.kicad_pcb  valiant-turtle-2.kicad_prl  valiant-turtle-2.kicad_pro  valiant-turtle-2.kicad_sch  ~valiant-turtle-2.kicad_sch.lck
kicad/c64_userport_adapter/: c64_ports.kicad_sym  c64_userport_adapter.kicad_prl  c64_userport_adapter.kicad_pro  c64_userport_adapter.kicad_sch  sym-lib-table
kicad/communicator/: ir_leds.kicad_sch  parallel_interface.kicad_sch  serial_interface.kicad_sch  vt2_communicator.kicad_pcb  vt2_communicator.kicad_pro  vt2_communicator.kicad_sch
kicad/gerbers/: valiant-turtle-2-B_Cu.gbl  valiant-turtle-2-B_Mask.gbs  valiant-turtle-2-B_Paste.gbp  valiant-turtle-2-Edge_Cuts.gm1  valiant-turtle-2-F_Paste.gtp  valiant-turtle-2-NPTH.drl  valiant-turtle-2-PTH.drl
openscad/acorn_userport_adapter/: .gitignore  generate_openscad_files.sh
openscad/charger/: generate_openscad_files.sh
openscad/communicator/: .gitignore  generate_openscad_files.sh
openscad/robot/: generate_openscad_files.sh
openscad/scad/: battery.scad  body.scad  display_mount.scad  head.scad  head_cover.scad  isoahedron.scad  leds.scad  logotype.scad  main.scad  motor_bay.scad  motor_mounts.scad  pcb.scad  pen_holder_base.scad  pen_holder_cap.scad  pen_holder_top.scad  servo.scad  servo_holder.scad  shell.scad  shell_bottom.scad  shell_top.scad  threaded_inserts.scad  wheels.scad
openscad/stl/: battery_cover.stl  battery_holder.stl  body.stl  body_left.stl  body_right.stl  body_se.stl  head.stl  head_cover.stl  led_holder.stl  led_holder_support.stl  logotype.stl  motor_bay.stl  motor_mount.stl  motor_mounts.stl  pcb.stl  pcb_mount_back.stl  pcb_mount_front.stl  pen.stl  pen_holder_base.stl  pen_holder_cap.stl  pen_holder_top_large.stl  pen_holder_top_medium.stl  pen_holder_top_small.stl  servo_holder.stl  servo_horn.stl  servo_mount.stl  shell.stl  shell_bottom.stl  shell_dot.stl  shell_lid.stl  shell_se.stl  shell_top.stl  wheel.stl
robot/firmware/: CMakeLists.txt  acccalc.c  acccalc.h  ble_advertising.py  ble_peripheral.py  btcomms.c  btcomms.h  btstack_config.h  button.c  buttons.c  buttons.h  cli.c  cli.h  command.c  command.h  configuration.c  configuration.h  configuration.py  data_encode.py  debug.c  debug.h  display.c  display.h  drivemotors.c  drivemotors.h  drv8825.py  eeprom.c  eeprom.h  eeprom.py  fifo.c  fifo.h  i2cbus.c  i2cbus.h  ina260.c  ina260.h  ina260.py  led_fx.py  leds.h  log.py  main.c  (+35 more)
robot/kicad/: mounting.kicad_sch  stepperdriver.kicad_sch  valiant-turtle-2.kicad_pcb  valiant-turtle-2.kicad_pro  valiant-turtle-2.kicad_sch
robot/mpython_fw/: ble_peripheral.py  drv8825.py  eeprom.py  ina260.py  log.py  main.py  metric.py  pen.py  pulse_generator.py  servo.py  stepper.py  velocity.py  ws2812b.py
robot/old_firmware/: CMakeLists.txt  btcomms.h  button.h  drivemotors.c  drivemotors.h  fifo.h  ina260.c  penservo.c
robot/openscad/: .gitignore  generate_openscad_files.sh  generate_stl_files.sh
software/acornsoft_logo/: vt2ext.lg
software/communicator/: ble_central.py  commands_tx.py  leds.py  main.py  options.py  picolog.py  serial_comms.py
software/linux/: .gitignore  abstract_turtle.py  ble_central.py  calitest.py  cat.py  commands_tx.py  control_tx.py  floor_turtle.py  logotype.py  screen_turtle.py  (+6 more)
(+328 files in other folders)
